Image centering and Dark mode fixes for Safari

--- a/static/style.css
+++ b/static/style.css
@@ -153,6 +153,8 @@ textarea:-webkit-autofill {
 img {
   display: block;
   max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* Header
 -------------------------------------------------- */
